youfull/objects/Sales_Org_Ldrship_MktTags__c.object
<CustomObject>
    <fields>
        <fullName>UQ_TITL_1_REP_WITH_FAP_CNT__c</fullName>
        <label>UQ_TITL_1_REP_WITH_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_SBMTD_ORD_AMT__c</fullName>
        <label>UQ_TITL_1_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UQ_TITL_1_SBMTD_ORD_CNT__c</fullName>
        <label>UQ_TITL_1_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Org Ldrship Mkt TagsDONOT USE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Market_Analysis__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SOLM-{00000000}</displayFormat>
        <label>Sales Org Ldrship Mkt Tags Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Org Ldrship Mkt Tags</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>